# Pipepair

./: cli.py  core.py  fallback1.py  pipeline.yaml  publish.yml  pyproject.toml  step1.py
